# mehdi-cz

./: DEPLOY.md  Dockerfile  README.md  TODO.md  contentlayer.config.ts  dev-playground.sh  docker-compose.yml  next.config.js  package.json
.github/workflows/: docker.yml
app/: Main.tsx  tag-data.json
app/contact/: page.tsx
app/editor/: page.tsx
app/hire/: page.tsx
app/playground-test/: page.tsx
app/work/: page.tsx
components/: ContactForm.tsx  Footer.tsx  FullEditor.tsx  Header.tsx  Image.tsx  JsonLd.tsx  Link.tsx  MDXComponents.tsx  MainCard.tsx  MobileNav.tsx  OpportunitiesCard.tsx  OptimizedImage.tsx  WebVitals.tsx  WorkCard.tsx
data/: projectsData.ts  siteMetadata.js
data/authors/: default.mdx
data/blog/: agent-tool-call-deadline.mdx  (+44 more)
js_go_rust_playground/code-playground/: Cargo.toml  Dockerfile  README.md  docker-compose.snippet.yml
js_go_rust_playground/code-playground/examples/: 01_the_crime_scene.rs  02_the_bouncer.rs  03_unpin_escape.rs  04_box_pin_vs_stack_pin.rs  05_as_mut_reborrow.rs  06_structural_pinning.rs  07_poll_by_hand.rs  08_the_disaster.rs
js_go_rust_playground/code-playground/examples/go/: 01_goroutines.go  02_interfaces.go  03_error_handling.go
js_go_rust_playground/code-playground/examples/js/: 01_event_loop.js  02_closures.js  03_prototypes.js  04_coercion.js
js_go_rust_playground/code-playground/src/: cache.rs  circuit_breaker.rs  errors.rs  examples.rs  go_proxy.rs  js_runner.rs  main.rs  rate_limit.rs  security.rs  telemetry.rs
layouts/: AuthorLayout.tsx  PostBanner.tsx  PostLayout.tsx  PostSimple.tsx
(+7 files in other folders)
