[package]
name = "code-playground"
version = "0.1.0"
edition = "2021"
description = "A compact Axum microservice that serves interactive code examples and proxies compilation to upstream sandboxes"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
sha2 = "0.10"
hex = "0.4"
boa_engine = "0.19"
urlencoding = "2"

# Observability — OpenTelemetry
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics"] }
tracing-opentelemetry = "0.32"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
